Use left aligned collection view layout for profile screen attributes https://app.asana.com/0/28209080808036/30869489606669

--- a/Ketch/UserInterface/Profile/ProfileInfoCell.xib
+++ b/Ketch/UserInterface/Profile/ProfileInfoCell.xib
@@ -27,7 +27,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="California Institue of the Arts" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qPe-Ra-5JK" userLabel="Text">
-                        <rect key="frame" x="31" y="5" width="195" height="15"/>
+                        <rect key="frame" x="31" y="7" width="195" height="15"/>
                         <fontDescription key="fontDescription" name="TransatTextMedium" family="Transat Text" pointSize="15"/>
                         <color key="textColor" red="0.082352941176470587" green="0.396078431372549" blue="0.52941176470588236" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -36,7 +36,7 @@
                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             </view>
             <constraints>
-                <constraint firstAttribute="centerY" secondItem="qPe-Ra-5JK" secondAttribute="centerY" id="1ba-Rm-kay"/>
+                <constraint firstAttribute="centerY" secondItem="qPe-Ra-5JK" secondAttribute="centerY" constant="-2" id="1ba-Rm-kay"/>
                 <constraint firstItem="LKR-IP-O5H" firstAttribute="top" secondItem="ByA-YF-yCG" secondAttribute="top" priority="751" id="8Kn-T9-Qhb"/>
                 <constraint firstAttribute="bottom" secondItem="LKR-IP-O5H" secondAttribute="bottom" priority="751" id="CZK-bf-dHf"/>
                 <constraint firstAttribute="centerY" secondItem="LKR-IP-O5H" secondAttribute="centerY" id="CnG-qw-c0A"/>
