--- a/Ketch/UserInterface/Profile/ProfileView.xib
+++ b/Ketch/UserInterface/Profile/ProfileView.xib
@@ -31,7 +31,7 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="649"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iN0-l3-epB">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="649"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8A2-xC-PLX" userLabel="Photos" customClass="SwipeView">
@@ -50,7 +50,7 @@
                             <color key="pageIndicatorTintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             <color key="currentPageIndicatorTintColor" red="0.25490196078431371" green="0.87058823529411766" blue="0.8666666666666667" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </pageControl>
-                        <view contentMode="scaleToFill" verticalCompressionResistancePriority="249" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ov3-cQ-tgW" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
+                        <view contentMode="scaleToFill" verticalCompressionResistancePriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="ov3-cQ-tgW" customClass="WaveView" customModule="Ketch" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="308" width="320" height="1341"/>
                             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                         </view>
@@ -82,34 +82,29 @@
                                 <action selector="showMoreOptions:" destination="-1" eventType="touchUpInside" id="o0D-2U-ZS4"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Anastasia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTD-bt-yNd" userLabel="Name">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Anastasia" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yTD-bt-yNd" userLabel="Name">
                             <rect key="frame" x="100" y="336" width="119" height="27"/>
                             <fontDescription key="fontDescription" name="TransatTextBold" family="Transat Text" pointSize="27"/>
                             <color key="textColor" red="0.94509803921568625" green="0.40000000000000002" blue="0.22745098039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="120" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kHN-3G-ecZ" customClass="IntrinsicSizeCollectionView" customModule="Ketch" customModuleProvider="target">
-                            <rect key="frame" x="0.0" y="371" width="320" height="120"/>
+                        <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="infinite" placeholderIntrinsicHeight="120" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="kHN-3G-ecZ" customClass="IntrinsicSizeCollectionView" customModule="Ketch" customModuleProvider="target">
+                            <rect key="frame" x="22" y="371" width="276" height="120"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="100" id="2PB-Zo-ShO"/>
                             </constraints>
-                            <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="0.0" id="w1K-Pc-ahd">
-                                <size key="itemSize" width="100" height="25"/>
-                                <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                                <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                                <inset key="sectionInset" minX="22" minY="0.0" maxX="22" maxY="0.0"/>
-                            </collectionViewFlowLayout>
+                            <collectionViewLayout key="collectionViewLayout" id="fjt-hW-3pw" customClass="UICollectionViewLeftAlignedLayout"/>
                             <variation key="default">
                                 <mask key="constraints">
                                     <exclude reference="2PB-Zo-ShO"/>
                                 </mask>
                             </variation>
                         </collectionView>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="profile-about-me-divider" translatesAutoresizingMaskIntoConstraints="NO" id="05h-5P-i0C">
+                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile-about-me-divider" translatesAutoresizingMaskIntoConstraints="NO" id="05h-5P-i0C">
                             <rect key="frame" x="8" y="504" width="572" height="11"/>
                         </imageView>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gur-zm-gdr" userLabel="About" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gur-zm-gdr" userLabel="About" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                             <rect key="frame" x="22" y="527" width="276" height="100"/>
                             <attributedString key="attributedText">
                                 <fragment>
@@ -135,24 +130,24 @@
                         <constraint firstItem="Gur-zm-gdr" firstAttribute="top" secondItem="05h-5P-i0C" secondAttribute="bottom" constant="12" id="1dt-Kl-kRP"/>
                         <constraint firstItem="Ced-fy-WtN" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" placeholder="YES" id="4mK-LU-a0i"/>
                         <constraint firstAttribute="centerX" secondItem="yTD-bt-yNd" secondAttribute="centerX" id="5bt-ON-gBe"/>
-                        <constraint firstAttribute="trailing" secondItem="Gur-zm-gdr" secondAttribute="trailing" constant="22" id="DKm-Se-bii"/>
+                        <constraint firstItem="Gur-zm-gdr" firstAttribute="trailing" secondItem="kHN-3G-ecZ" secondAttribute="trailing" id="5yQ-CX-etG"/>
                         <constraint firstItem="8A2-xC-PLX" firstAttribute="trailing" secondItem="zkL-na-OA5" secondAttribute="trailing" constant="16" id="EM1-Z5-VMq"/>
                         <constraint firstAttribute="trailing" secondItem="Ced-fy-WtN" secondAttribute="trailing" id="JjS-ss-yCj"/>
                         <constraint firstItem="ov3-cQ-tgW" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Jye-h9-9xG"/>
-                        <constraint firstItem="kHN-3G-ecZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="R2L-p1-M5h"/>
+                        <constraint firstItem="kHN-3G-ecZ" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="R2L-p1-M5h"/>
                         <constraint firstItem="8A2-xC-PLX" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="S9w-jN-rTo"/>
                         <constraint firstItem="ov3-cQ-tgW" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="bottom" constant="-12" id="Tkz-RJ-nFZ"/>
                         <constraint firstItem="8A2-xC-PLX" firstAttribute="bottom" secondItem="zkL-na-OA5" secondAttribute="bottom" id="Y5O-HR-SSS"/>
                         <constraint firstAttribute="bottom" secondItem="ov3-cQ-tgW" secondAttribute="bottom" constant="-1000" id="YC8-ke-Ayp"/>
+                        <constraint firstItem="Gur-zm-gdr" firstAttribute="leading" secondItem="kHN-3G-ecZ" secondAttribute="leading" id="YsJ-gF-TEO"/>
                         <constraint firstItem="05h-5P-i0C" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="8" id="Yse-zK-vQX"/>
                         <constraint firstItem="gjP-E3-fDY" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="Yzx-aN-Im6"/>
                         <constraint firstItem="kHN-3G-ecZ" firstAttribute="top" secondItem="yTD-bt-yNd" secondAttribute="bottom" constant="8" id="cqv-Uv-33B"/>
                         <constraint firstAttribute="trailing" secondItem="8A2-xC-PLX" secondAttribute="trailing" id="fZl-sZ-Td9"/>
-                        <constraint firstAttribute="trailing" secondItem="kHN-3G-ecZ" secondAttribute="trailing" id="g1E-2T-Yqz"/>
+                        <constraint firstAttribute="trailing" secondItem="kHN-3G-ecZ" secondAttribute="trailing" constant="22" id="g1E-2T-Yqz"/>
                         <constraint firstItem="yTD-bt-yNd" firstAttribute="top" secondItem="8A2-xC-PLX" secondAttribute="bottom" constant="16" id="g1O-z4-CbG"/>
                         <constraint firstItem="05h-5P-i0C" firstAttribute="top" secondItem="kHN-3G-ecZ" secondAttribute="bottom" constant="13" id="ghP-b4-XPA"/>
                         <constraint firstAttribute="width" constant="320" placeholder="YES" id="jRt-PW-SNM"/>
-                        <constraint firstItem="Gur-zm-gdr" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="22" id="jgS-XF-Jyl"/>
                         <constraint firstItem="gjP-E3-fDY" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" placeholder="YES" id="sDc-68-dW8"/>
                         <constraint firstAttribute="trailing" secondItem="ov3-cQ-tgW" secondAttribute="trailing" id="u2K-gR-IXE"/>
                         <constraint firstItem="8A2-xC-PLX" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="ykK-pk-1th"/>
