--- a/Ketch/Base.lproj/Main.storyboard
+++ b/Ketch/Base.lproj/Main.storyboard
@@ -9,24 +9,6 @@
         </mutableArray>
     </customFonts>
     <scenes>
-        <!--My Profile-->
-        <scene sceneID="eia-8N-UZ9">
-            <objects>
-                <viewController storyboardIdentifier="Profile" id="bQv-dO-auU" customClass="ProfileViewController" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="My Profile" id="vUc-qU-qhl">
-                        <barButtonItem key="rightBarButtonItem" title="Edit" id="fxU-ar-kdx">
-                            <connections>
-                                <segue destination="Lqa-Xo-Tcw" kind="show" id="Q7K-Wx-pjZ"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="W5S-Ky-nbE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-98" y="1042"/>
-        </scene>
         <!--New Connection View Controller-->
         <scene sceneID="Lfd-Nm-nb7">
             <objects>
@@ -37,21 +19,20 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hvP-mk-Fcq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1610" y="340"/>
+            <point key="canvasLocation" x="1592" y="340"/>
         </scene>
         <!--Game View Controller-->
         <scene sceneID="5fm-o7-1g2">
             <objects>
                 <viewController storyboardIdentifier="Game" id="brw-cx-YUO" customClass="GameViewController" sceneMemberID="viewController">
                     <connections>
-                        <segue destination="yMw-7P-Sbk" kind="show" identifier="GameToNewConnection" id="Zph-Ug-ak8"/>
                         <segue destination="Vhy-hq-gwn" kind="presentation" identifier="GameToSettings" id="vNO-1M-A8G"/>
                         <segue destination="YUi-xK-iJg" kind="show" identifier="GameToDock" id="PWk-0v-Pdh"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="TlQ-8h-TWe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="802" y="1037"/>
+            <point key="canvasLocation" x="818" y="1139"/>
         </scene>
         <!--Your Matches-->
         <scene sceneID="mW7-zq-TQ3">
@@ -66,13 +47,12 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Y2Q-Pb-RU0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1473" y="1042"/>
+            <point key="canvasLocation" x="1592" y="1139"/>
         </scene>
-        <!--Chat-->
+        <!--Chat View Controller-->
         <scene sceneID="bLH-YZ-QSJ">
             <objects>
                 <viewController storyboardIdentifier="Chat" id="rRd-ZO-60U" customClass="ChatViewController" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Chat" id="7br-lE-KX6"/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
                     <connections>
                         <segue destination="G4Y-Ae-Xgh" kind="presentation" identifier="ChatToProfile" id="T9Y-bJ-q8s"/>
@@ -80,43 +60,39 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="B9f-P8-SG1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1473" y="1911"/>
+            <point key="canvasLocation" x="2343" y="1139"/>
         </scene>
         <!--Profile View Controller-->
         <scene sceneID="mYf-IJ-xkN">
             <objects>
-                <viewController id="G4Y-Ae-Xgh" customClass="ProfileViewController" sceneMemberID="viewController"/>
+                <viewController storyboardIdentifier="Profile" id="G4Y-Ae-Xgh" customClass="ProfileViewController" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="Lqa-Xo-Tcw" kind="presentation" id="9hD-eE-Lne"/>
+                    </connections>
+                </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="H5s-tv-xnk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2156" y="1911"/>
+            <point key="canvasLocation" x="1592" y="1920"/>
         </scene>
-        <!--Edit Profile-->
+        <!--Edit Profile View Controller-->
         <scene sceneID="98E-xT-5yo">
             <objects>
-                <viewController storyboardIdentifier="EditProfile" id="Lqa-Xo-Tcw" customClass="EditProfileViewController" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Edit Profile" id="bxX-U8-75j"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
-                </viewController>
+                <viewController storyboardIdentifier="EditProfile" id="Lqa-Xo-Tcw" customClass="EditProfileViewController" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WMP-6s-UTq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-478" y="1042"/>
+            <point key="canvasLocation" x="2343" y="1920"/>
         </scene>
-        <!--Settings-->
+        <!--Settings View Controller-->
         <scene sceneID="6E1-Ce-dgY">
             <objects>
                 <viewController storyboardIdentifier="Settings" id="Vhy-hq-gwn" customClass="SettingsViewController" sceneMemberID="viewController">
-                    <navigationItem key="navigationItem" title="Settings" id="Ot3-Pt-0WY"/>
-                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
-                        <segue destination="bQv-dO-auU" kind="show" identifier="SettingsToProfile" id="wnv-o0-kZH"/>
+                        <segue destination="G4Y-Ae-Xgh" kind="presentation" identifier="SettingsToProfile" id="9mb-SI-KHc"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zfc-Bp-zvE" userLabel="First Responder" sceneMemberID="firstResponder"/>
-                <navigationItem title="Settings" id="4PF-BM-XHD"/>
             </objects>
-            <point key="canvasLocation" x="282" y="1042"/>
+            <point key="canvasLocation" x="818" y="1920"/>
         </scene>
         <!--Root View Controller-->
         <scene sceneID="Eov-g8-b8w">
@@ -133,25 +109,25 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Wtb-Vn-cEV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="142" y="340"/>
+            <point key="canvasLocation" x="106" y="1139"/>
         </scene>
         <!--Signup Storyboard @ Signup-->
         <scene sceneID="Dpy-Ax-4fa">
             <objects>
                 <viewController id="xL7-fS-abd" userLabel="Signup Storyboard @ Signup" sceneMemberID="viewController">
                     <label key="view" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signup Storyboard @ Signup" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="rml-nU-cqA">
-                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="300" height="300"/>
+                    <size key="freeformSize" width="250" height="250"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="oIs-YV-S1K" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="812" y="-382"/>
+            <point key="canvasLocation" x="-69" y="290"/>
         </scene>
         <!--Loading View Controller-->
         <scene sceneID="EYP-uL-lzC">
@@ -218,22 +194,22 @@
             <objects>
                 <viewController id="jhY-qC-hf5" userLabel="Signup Storyboard @ Waitlist" sceneMemberID="viewController">
                     <label key="view" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Signup Storyboard @ Waitlist" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="LHa-6H-Csf">
-                        <rect key="frame" x="0.0" y="0.0" width="300" height="300"/>
+                        <rect key="frame" x="0.0" y="0.0" width="250" height="250"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-                    <size key="freeformSize" width="300" height="300"/>
+                    <size key="freeformSize" width="250" height="250"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gNG-pd-4C0" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1208" y="-382"/>
+            <point key="canvasLocation" x="-69" y="630"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
-        <segue reference="lmb-Zd-YjN"/>
-        <segue reference="Nx5-oB-y5G"/>
+        <segue reference="PWk-0v-Pdh"/>
+        <segue reference="9mb-SI-KHc"/>
     </inferredMetricsTieBreakers>
 </document>
